--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-simple-typewriter": "^3.0.1",
-    "react-tsparticles": "^1.37.5",
+    "recharts": "^2.1.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
